--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,25 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch \"WelcomeBot - TestApp\"",
+            "program": "${workspaceFolder}/app.js",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/bot.js"
+            "envFile": "${workspaceFolder}/.debug.env"
+        }
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch \"WelcomeBot\"",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}/bot.js",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
