--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "botkit": "^4.6.2",
     "botkit-cms": "0.0.4",
     "botkit-plugin-cms": "^1.0.3",
+    "botkit-storage-mongo": "^1.0.7",
     "dotenv": "^7.0.0",
     "restify": "^8.5.1"
   }
