--- a/package.json
+++ b/package.json
@@ -8,13 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "botbuilder-adapter-facebook": "^1.0.9",
+    "botbuilder-adapter-facebook": "^1.0.10",
     "botbuilder-storage-mongodb": "^0.9.5",
-    "botkit": "^4.6.2",
-    "botkit-cms": "0.0.4",
+    "botkit": "^4.9.0",
     "botkit-plugin-cms": "^1.0.3",
-    "botkit-storage-mongo": "^1.0.7",
-    "dotenv": "^7.0.0",
-    "restify": "^8.5.1"
+    "dotenv": "^7.0.0"
   }
 }
