--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "botkit": "^4.9.0",
     "botkit-plugin-cms": "^1.0.3",
     "dotenv": "^7.0.0"
+  },
+  "devDependencies": {
+    "uuidv4": "^6.0.9"
   }
 }
