--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "botkit-plugin-cms": "^1.0.3",
     "dotenv": "^7.0.0"
   },
-  "devDependencies": {
-    "uuidv4": "^6.0.9"
-  }
+  "devDependencies": {}
 }
